--- a/youtube.htm
+++ b/youtube.htm
@@ -98,11 +98,12 @@ function Model()
 		var Input = Self.InputValue();
 		var Code;
 
-		var RegExpResults = /[a-zA-Z0-9\-\_]{11}/.exec(Input);
-		if (!RegExpResults || RegExpResults.length != 1)
+		var Expression = /^https?:\/\/(?:[0-9A-Z-]+\.)?(?:youtu\.be\/|youtube(?:-nocookie)?\.com\S*[^\w\s-])([\w-]{11})(?=[^\w-]|$)(?![?=&+%\w.-]*(?:['"][^<>]*>|<\/a>))[?=&+%\w.-]*/ig;
+		var Match = Expression.exec(Input);
+		if (Match && Match[1] && Match[1].length == 11)
+			AddVideoByCode(Match[1]);
+		else	
 			SearchYouTube(Input);
-		else
-			AddVideoByCode(RegExpResults[0]);
 	}
 
 	Self.AddToList = function(Code, Title)
