--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 <style>
-body
-{
-	font-family: "Open Sans", sans-serif;
-}
-
+body { font-family: "Open Sans", sans-serif; }
 .padded { padding: 1em; }
 .pointer { cursor: pointer; }
 
@@ -70,6 +66,7 @@ div#list .start-at input
 <script src="http://rawgit.com/IntoMethod/Lightweight-JSONP/master/jsonp.js"></script>
 <script src="https://www.youtube.com/iframe_api"></script>
 <script>
+var YouTubeKey = "AIzaSyDxl0ZuYLIj_byGVkEFJPmLUfmUceWsHyc";
 function onYouTubeIframeAPIReady() { ko.applyBindings(new Model()); }
 
 function ItemModel(Options)
@@ -77,7 +74,7 @@ function ItemModel(Options)
 	Options = Options || {};
 	var Item = {};
 	Item.Code = Options.Code;
-	Item.Title = Options.Title || ("Untitled (" + OptionsCode + ")");
+	Item.Title = Options.Title || ("Untitled (" + Options.Code + ")");
 	Item.StartAt = ko.observable(Options.StartAt || 0);
 	return Item;
 }
@@ -96,13 +93,12 @@ function Model()
 	Self.ProcessInput = function()
 	{
 		var Input = Self.InputValue();
-		var Code;
 
 		var Expression = /^https?:\/\/(?:[0-9A-Z-]+\.)?(?:youtu\.be\/|youtube(?:-nocookie)?\.com\S*[^\w\s-])([\w-]{11})(?=[^\w-]|$)(?![?=&+%\w.-]*(?:['"][^<>]*>|<\/a>))[?=&+%\w.-]*/ig;
 		var Match = Expression.exec(Input);
 		if (Match && Match[1] && Match[1].length == 11)
 			AddVideoByCode(Match[1]);
-		else	
+		else
 			SearchYouTube(Input);
 	}
 
@@ -115,16 +111,16 @@ function Model()
 	{
 		JSONP.get
 		(
-			"http://gdata.youtube.com/feeds/api/videos/" + Code,
+			"https://www.googleapis.com/youtube/v3/videos",
 			{
-				"v": 2,
-				"alt": "json"
+				"part": "snippet",
+				"id": Code,
+				"key": YouTubeKey
 			},
-			function(Data)
+			function(data)
 			{
-				var Entry = (Data || {}).entry || {};
-				var Title = (Entry.title || {})["$t"];
-				Self.AddToList(Code, Title);
+				var snippet = (((data || {}).items || [])[0] || {}).snippet || {};
+				Self.AddToList(Code, snippet.title);
 				Self.ClearInput();
 			}
 		);
@@ -134,35 +130,36 @@ function Model()
 	{
 		JSONP.get
 		(
-			"http://gdata.youtube.com/feeds/videos",
+			"https://www.googleapis.com/youtube/v3/search",
 			{
-				"vq": Query,
-				"max-results": 8,
-				"alt": "json-in-script"
+				"part": "snippet",
+				"q": Query,
+				"maxResults": 8,
+				"key": YouTubeKey
 			},
 			function(Data)
 			{
 				Self.SearchResults.removeAll();
-				(((Data || {}).feed || {}).entry || []).forEach
+				((Data || {}).items || []).forEach
 				(
-					function(Hit)
+					function(video)
 					{
-						var Title = (Hit.title || {})["$t"] || "<Untitled>";
-						var FeedURL = (Hit.id || {})["$t"] || "";
-						var Code = FeedURL.substring(FeedURL.lastIndexOf("/") + 1);
-						var Author = (((Hit["author"] || [])[0] || {})["name"] || {})["$t"];
-						var ThumbnailURL = (((Hit["media$group"] || {})["media$thumbnail"] || [])[1] || {}).url || "";
-						var Duration = ~~((Hit["media$group"] || {})["yt$duration"] || {}).seconds;
-						var Minutes = ~~(Duration / 60);
-						var Seconds = ("00" + ~~(Duration % 60)).slice(-2);
+						video = video || {};
+						var snippet = video.snippet || {};
+						var title = snippet.title;
+						var video_id = (video.id || {}).videoId;
+						var author = snippet.channelTitle;
+						var thumbnails = (snippet.thumbnails || {});
+						var thumbnail_url = (thumbnails[Object.keys(thumbnails)[0]] || {}).url;
+						// TODO: duration from videos.list call?
 
 						var SearchResult =
 						{
-							"Code": Code,
-							"Title": Title,
-							"Author": Author,
-							"ThumbnailURL": ThumbnailURL,
-							"Duration": Minutes + ":" + Seconds
+							"Code": video_id,
+							"Title": title,
+							"Author": author,
+							"ThumbnailURL": thumbnail_url,
+							"Duration": 0
 						};
 
 						Self.SearchResults.push(SearchResult);
