--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>YouTube Shuffle</title>
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 <style>
 body { font-family: "Open Sans", sans-serif; }
 .padded { padding: 1em; }
@@ -62,8 +62,8 @@ div#list .start-at input
 	overflow: hidden;
 }
 </style>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/knockout/3.0.0/knockout-min.js"></script>
-<script src="http://rawgit.com/IntoMethod/Lightweight-JSONP/master/jsonp.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.0.0/knockout-min.js"></script>
+<script src="https://rawgit.com/IntoMethod/Lightweight-JSONP/master/jsonp.js"></script>
 <script src="https://www.youtube.com/iframe_api"></script>
 <script>
 var YouTubeKey = "AIzaSyDxl0ZuYLIj_byGVkEFJPmLUfmUceWsHyc";
